<resources>
    <string name="app_name">Job Applications Tracker</string>

    <!-- Landing Screen -->
    <string name="landing_screen_heading">Manage Your Applications Easily</string>
    <string name="important_notes_text"><b>IMPORTANT</b>\n\u2022 Your data isn’t tracked unless you choose to save your progress.\n\u2022 This also means that if you choose to delete the app, all your data will be lost.\n\u2022 Checkout the app anonymously, and save your progress only if you like the app :)</string>
    <string name="signin_button_text">Going Anonymously</string>
    <string name="already_login_label">Already have an account?</string>
    <string name="google_signin_button_text">Sign In With Google</string>

    <!-- Main Activity -->
    <string name="menu_item_home">Home</string>
    <string name="menu_item_explore">Explore</string>
    <string name="menu_item_alert">Alerts</string>
    <string name="menu_item_profile">Profile</string>

    <!-- Home Screen -->
    <string name="label_home">Your Applications</string>
    <string name="label_home_header">Your\nApplications</string>
    <string name="label_details">️Application Details</string>
    <string name="label_details_header">️Application\nDetails</string>

    <!-- Add new applications -->
    <string name="add_new_application_back_button_text">Home</string>
    <string name="label_add_application">Add New Application</string>
    <string name="label_add_application_header">Add New\nApplication</string>
    <string name="content_desc_add_application">Takes user to a new screen where he can add a new application</string>
    <string name="add_application">Start Managing</string>
    <string-array name="job_status">
        <item>Waiting For Referral</item>
        <item>Applied</item>
        <item>Applied With Referral</item>
        <item>Rejected</item>
        <item>Selected</item>
    </string-array>
    
    <!-- Draft Message Screen -->
    <string name="header_preview_mode">Preview Mode</string>
    <string name="helper_preview_mode">Replaces the placeholders with their corresponding values.</string>
    <string name="header_setup_placeholder">Setup Placeholder</string>
    <string name="helper_setup_placeholder">Lets you change your messages with defined values dynamically.</string>
    <string name="content_desc_icon_placeholder">Placeholder Setup Icon</string>
    <string name="button_text_edit_mode">Edit Mode</string>
    <string name="button_text_send_message">Send Message</string>
    <string name="button_text_check_preview">Check Preview</string>

    <string name="bottom_sheet_header_placeholder">Placeholders</string>
    <string name="bottom_sheet_helper_placeholder">Let you map your custom labels against values that dynamically change content of your draft message.\nClick on \u2794 to check.</string>
    <string name="add_placeholder">Add Placeholder</string>
    <string name="update_placeholder">Save Changes</string>
    <string name="content_desc_remove_placeholder">Remove Placeholder</string>
    <string name="content_desc_icon_mapped">Icon showing key mapping</string>
    <string name="hint_placeholder_key">Key</string>
    <string name="hint_placeholder_value">Value</string>

    <!-- Explore Screen -->
    <string name="label_explore">Explore</string>

    <!-- Profile screen -->
    <string name="label_profile">Profile</string>
    <string name="user_details_header">User Details</string>
    <string name="settings_header">Settings</string>
    <string name="google_sign_in_layout_header">Save Your Data</string>
    <string name="google_sign_in_layout_text">With this new version, never loose your progress across multiple logins.</string>

    <!-- Alert screen -->
    <string name="label_alert">Alert</string>

    <string name="hint_company_name">Company</string>
    <string name="hint_role">Role</string>
    <string name="hint_job_link">Job Link</string>
    <string name="hint_job_status">Status</string>
    <string name="hint_notes">Eg. I have to ask XYZ person on LinkedIn for a referral. (Optional)</string>
    <string name="hint_search_view">Search company, job title</string>
    <string name="hint_draft_message">Draft Message</string>
    <string name="hint_placeholder_name">&lt;name&gt;</string>
    <string name="hint_placeholder_degree">&lt;degree&gt;</string>
    <string name="hint_placeholder_college">&lt;college&gt;</string>
    <string name="hint_placeholder_experience">&lt;experience&gt;</string>
    <string name="hint_placeholder_resume">&lt;resume&gt;</string>

    <string name="placeholder_notes">Notes</string>
    <string name="placeholder_job_url">Job URL</string>
    <string name="placeholder_created_at">Created At</string>
    <string name="placeholder_null_notes">~~Consider adding notes!!\nThey can help you remember who you approached for referral.~~</string>
    <string name="no_applications_title">Oops!</string>
    <string name="no_applications_message">No matching applications found!\nHow about adding a new application :)</string>
    <string name="show_preview">Show Preview</string>

    <string name="button_update">Update</string>
    <string name="button_save">Save</string>
    <string name="button_send">Send</string>

    <!-- For notifications -->
    <string name="channel_name">Job Status</string>
    <string name="channel_description">Periodic notification based on the status of your jobs.</string>
    <string name="notifications_alert_title">Notifications</string>
    <string name="notifications_alert_message">Keep yourself up-to-date with regular notifications regarding your applications.</string>

    <!-- Others -->
    <string name="placeholder_info">This is a rich text-editor, make sure you check the preview.</string>
    <string name="setup_placeholders">Setup Placeholders</string>

    <string name="show_placeholder_info">(Show More…)</string>
    <string name="hide_placeholder_info">hide info</string>
    <string name="back_button_desc">Back button</string>
    <string name="delete_button_desc">Delete application</string>
    <string name="send_button_desc">Send draft message</string>
    <string name="edit_button_desc">Edit application</string>
    <string name="spinner_desc">Application status drop down menu</string>
    <string name="content_desc_info_text_view">arrow on information text view</string>
    <string name="content_desc_user_dp">Display picture of the user</string>
    <string name="content_description_job_status">Status of your job application</string>
    <string name="content_description_back_button">Back button</string>

    <string name="empty_field_error_text">%1$s is a mandatory field!</string>
    <string name="content_description_company_logo">Company Logo</string>
    <string name="hint_search_applications">Search by company, role</string>

    <string name="tooltip_back_button">Back Button</string>

</resources>