<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/applicationsFragment">

    <fragment
        android:id="@+id/applicationsFragment"
        android:name="com.studbudd.application_tracker.fragments.ApplicationsFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_applications" >
        <action
            android:id="@+id/action_applicationsFragment_to_addApplicationFragment"
            app:destination="@id/addApplicationFragment" />
        <action
            android:id="@+id/action_applicationsFragment_to_applicationDetailsFragment"
            app:destination="@id/applicationDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/addApplicationFragment"
        android:name="com.studbudd.application_tracker.fragments.AddApplicationFragment"
        android:label="@string/label_add_application"
        tools:layout="@layout/fragment_add_application" />
    <fragment
        android:id="@+id/applicationDetailsFragment"
        android:name="com.studbudd.application_tracker.fragments.ApplicationDetailsFragment"
        android:label="@string/label_details"
        tools:layout="@layout/fragment_application_details" >
        <argument
            android:name="application_id"
            app:argType="integer" />
    </fragment>
</navigation>