<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature_applications.ui.draft_message.DraftMessage">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/window_background"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/content_description_back_button"
                android:src="@drawable/ic_arrow_back"
                android:tooltipText="@string/tooltip_back_button"
                app:backgroundTint="@color/card_color"
                app:elevation="0dp"
                app:tint="@color/dark_text" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_preview_mode" />

            <TextView
                style="@style/AppTextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helper_preview_mode"
                android:textColor="@color/light_text"
                android:textSize="@dimen/text_small" />

        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/show_preview_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/padding_card_horizontal" />

    <LinearLayout
        android:id="@+id/setup_placeholder_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:background="?attr/selectableItemBackground"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_setup_placeholder" />

                <TextView
                    style="@style/AppTextRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helper_setup_placeholder"
                    android:textColor="@color/light_text"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/content_desc_icon_placeholder"
                android:padding="8dp"
                android:src="@drawable/ic_placeholder" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/padding_card_horizontal" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_draft_message"
        style="@style/Body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@drawable/bg_round_corners"
        android:backgroundTint="@color/card_color"
        android:gravity="start"
        android:hint="@string/hint_draft_message"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:visibility="gone" />

    <TextView
        android:id="@+id/draft_message"
        style="@style/Body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autoLink="all"
        android:padding="16dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:visibility="visible"
        tools:text="@tools:sample/lorem/random" />

    <LinearLayout
        android:id="@+id/preview_screen_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="end|center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_button"
                style="@style/TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_edit_mode"
                android:textColor="@color/accent_color" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                style="@style/FilledButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="20dp"
                android:text="@string/button_text_send_message"
                app:icon="@drawable/ic_send"
                app:iconTint="#fafafa" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_preview_button"
        style="@style/FilledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:paddingEnd="20dp"
        android:text="@string/button_text_check_preview"
        android:visibility="gone"
        app:icon="@drawable/ic_check_preview"
        app:iconTint="#fafafa" />

</LinearLayout>
