<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature_applications.ui.create.AddNewApplicationActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="8dp"
        android:padding="12dp"
        android:src="@drawable/ic_arrow_back"
        app:tint="@color/dark_text"
        android:background="@drawable/bg_round_button"
        android:backgroundTint="@color/card_color"
        android:contentDescription="@string/content_description_back_button"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_add_application_header"
                style="@style/Title" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_name"
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_round_corners"
                android:backgroundTint="@color/card_color"
                android:drawableStart="@drawable/ic_company"
                android:drawablePadding="12dp"
                android:drawableTint="@color/dark_text"
                android:hint="@string/hint_company_name"
                android:inputType="textCapWords|textShortMessage"
                android:minHeight="48dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/job_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_round_corners"
                android:backgroundTint="@color/card_color"
                android:hint="@string/hint_role"
                android:drawableStart="@drawable/ic_job_role"
                android:drawablePadding="12dp"
                android:drawableTint="@color/dark_text"
                android:inputType="textCapWords"
                style="@style/Body" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/job_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_round_corners"
                android:backgroundTint="@color/card_color"
                android:hint="@string/hint_job_link"
                android:drawableStart="@drawable/ic_link"
                android:drawablePadding="12dp"
                android:drawableTint="@color/dark_text"
                android:inputType="textUri"
                style="@style/Body" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/light_text"
                    android:text="@string/hint_job_status" />
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <Spinner
                        android:id="@+id/job_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        style="@style/SpinnerStyle"
                        android:contentDescription="@string/content_description_job_status" />
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="12dp"
                        android:src="@drawable/ic_drop_down"
                        app:tint="@color/dark_text"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:gravity="top"
                    android:background="@drawable/bg_round_corners"
                    android:backgroundTint="@color/card_color"
                    android:hint="@string/hint_notes"
                    android:paddingVertical="14dp"
                    android:paddingStart="48dp"
                    android:drawableTint="@color/dark_text"
                    android:inputType="textCapSentences|textMultiLine"
                    style="@style/Body" />
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="12dp"
                    android:src="@drawable/ic_description"
                    app:tint="@color/dark_text" />
            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_application"
                style="@style/FilledButton"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="32dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>